# ovx-mockup

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
assets/: physics_boxes.usda
src/: main.cpp
